--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,14 @@
 .read-the-docs {
   color: #888;
 }
+
+.highlight {
+  border: 4px solid transparent;
+  animation: highlight 1s;
+}
+
+
+@keyframes highlight {
+  from { border-color: red }
+  to   { border-color: transparent; }
+}
