--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+:root {
+  --green: rgb(122, 198, 10)
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -5,40 +9,8 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
 .card {
   padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
 
 .report-box {
@@ -54,4 +26,33 @@
 @keyframes highlight {
   from { border-color: red }
   to   { border-color: transparent; }
+}
+
+.command-form {
+  width: 600px;
+  margin-top: 1rem;
+  display: flex;
+  justify-content: space-evenly;
+  flex-grow: 2 1;
+}
+
+.command-box {
+  border: 3px solid var(--green);
+  background-color: black;
+  padding: 16px;
+  color: var(--green);
+  font-size: 1rem;
+  flex-grow: 1;
+}
+
+.command-button {
+  border: 3px solid var(--green);
+  background-color: var(--green);
+  border-left: none;
+  border-radius: 0;
+  padding: 16px;
+}
+
+.error {
+  width: 600px;
 }
